# NeuronPrompter

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  doc-validation.yml  release.yml
crates/neuronprompter/: Cargo.toml  build.rs
crates/neuronprompter-api/: Cargo.toml
crates/neuronprompter-api/src/: error.rs  lib.rs  router.rs  session.rs  state.rs  tests.rs
crates/neuronprompter-api/src/handlers/: categories.rs  chains.rs  clipboard.rs  collections.rs  common.rs  copy.rs  health.rs  io.rs  mod.rs  ollama.rs  prompts.rs  script_versions.rs  scripts.rs  search.rs  sessions.rs  settings.rs  shutdown.rs  tags.rs  users.rs  versions.rs
crates/neuronprompter-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  session.rs
crates/neuronprompter-application/: Cargo.toml
crates/neuronprompter-application/src/: association_sync.rs  category_service.rs  chain_service.rs  collection_service.rs  copy_service.rs  error.rs  io_service.rs  lib.rs  prompt_service.rs  script_service.rs  script_version_service.rs  search_service.rs  settings_service.rs  sync_service.rs  tag_service.rs  user_service.rs  version_service.rs
crates/neuronprompter-application/src/ollama/: client.rs  improve.rs  metadata.rs  mod.rs  translate.rs
crates/neuronprompter-application/src/tests/: mod.rs  test_chain_service.rs  test_io_service.rs  test_ollama.rs  test_prompt_service.rs  test_script_service.rs  test_script_version_service.rs  test_search_service.rs  test_user_service.rs  test_version_service.rs
crates/neuronprompter-core/: Cargo.toml
crates/neuronprompter-core/src/: constants.rs  error.rs  lib.rs  paths.rs  serde_helpers.rs  template.rs  validation.rs
crates/neuronprompter-core/src/domain/: category.rs  chain.rs  collection.rs  mod.rs  prompt.rs  script.rs  script_version.rs  settings.rs  tag.rs  user.rs  version.rs
crates/neuronprompter-core/src/tests/: mod.rs  test_domain.rs  test_error.rs  test_template.rs  test_validation.rs
crates/neuronprompter-db/: Cargo.toml
crates/neuronprompter-db/src/: connection.rs  connection_provider.rs  error.rs  lib.rs  migrations.rs  pool.rs
crates/neuronprompter-db/src/repo/: categories.rs  chains.rs  collections.rs  mod.rs  prompts.rs  script_versions.rs  scripts.rs  search.rs  settings.rs  tags.rs  users.rs  versions.rs
crates/neuronprompter-db/src/tests/: mod.rs  test_categories.rs  test_chains.rs  test_collections.rs  test_migrations.rs  test_mixed_chains.rs  test_prompts.rs  test_schema_constraints.rs  test_script_versions.rs  test_scripts.rs  test_search.rs  test_settings.rs  test_tags.rs  test_users.rs  test_versions.rs
crates/neuronprompter-mcp/: Cargo.toml
crates/neuronprompter-mcp/src/: auth.rs  error.rs  lib.rs  registration.rs  server.rs  tool_categories.rs  tool_prompts.rs  tool_tags.rs  tools.rs  transport.rs
crates/neuronprompter-web/: Cargo.toml
crates/neuronprompter-web/frontend/: .npmrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/neuronprompter-web/frontend/src/: App.css  App.tsx  global.d.ts  main.tsx  utils.ts
crates/neuronprompter-web/frontend/src/api/: client.test.ts  client.ts  dialogs.ts  examples.ts  sse.ts  types.ts
crates/neuronprompter-web/frontend/src/components/: ChainEditor.css  ChainEditor.tsx  ChainList.css  ChainList.tsx  LoginPage.tsx  ModalDialog.tsx  PromptEditor.css  PromptEditor.tsx  PromptList.css  PromptList.tsx  ScriptEditor.css  ScriptEditor.tsx  ScriptList.css  ScriptList.tsx  SplitPane.css  SplitPane.tsx  TemplateDialog.tsx  Toast.css  Toast.tsx  UnsavedChangesDialog.tsx  VersionPanel.css  VersionPanel.tsx
crates/neuronprompter-web/frontend/src/components/layout/: StatusBar.tsx  Topbar.tsx
crates/neuronprompter-web/frontend/src/components/panels/: LogPanel.tsx  McpPanel.tsx
crates/neuronprompter-web/frontend/src/components/tabs/: ChainsTab.css  ChainsTab.tsx  ClipboardTab.css  ClipboardTab.tsx  ModelsTab.css  ModelsTab.tsx  OrganizeTab.css  OrganizeTab.tsx  PromptsTab.css  PromptsTab.tsx  ScriptsTab.css  ScriptsTab.tsx  SettingsTab.css  SettingsTab.tsx  UsersTab.css  UsersTab.tsx
crates/neuronprompter-web/frontend/src/components/ui/: CopyToUserDropdown.css  CopyToUserDropdown.tsx  WelcomeDialog.css  WelcomeDialog.tsx
crates/neuronprompter-web/frontend/src/stores/: app.test.ts  app.ts
crates/neuronprompter-web/frontend/src/styles/: components.css  global.css  variables.css
crates/neuronprompter-web/frontend/src/utils/: errors.ts
crates/neuronprompter-web/src/: assets.rs  broadcast_layer.rs  browser.rs  lib.rs  native_window.rs  splash.rs  sse.rs  tests.rs
crates/neuronprompter-web/src/handlers/: dialogs.rs  doctor.rs  mcp.rs  mod.rs  ollama.rs  setup.rs
crates/neuronprompter/assets/: icon.icns
crates/neuronprompter/src/: main.rs
docs/: README.md  api-reference.md
docs/architecture/: architecture.tex  references.bib
docs/diagrams/: data_model.puml
migrations/: 0001_initial.sql
tests/: TESTPLAN.md
tools/ci/: validate_architecture.py  validate_schemas.py  validate_tests.py
