[package]
name = "neuronprompter-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Service layer coordinating transactions, versioning workflows, import/export, and Ollama integration"

[lints]
workspace = true

[dependencies]
neuronprompter-core = { workspace = true }
neuronprompter-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
# serde_yml replaces the deprecated serde_yaml crate for YAML front-matter
# serialization and deserialization in Markdown import/export.
serde_yml = { workspace = true }
chrono = { workspace = true }
# Direct dependency: ConnectionProvider closures receive &rusqlite::Connection.
rusqlite = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true, features = ["test-util"] }
