[package]
name = "neuronprompter-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Domain types, validation rules, error types, and trait definitions for NeuronPrompter"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
